# DndAgent

./: .gitignore  INSTRUCTION.md  PRESENTATION_SCRIPT.md  README.md  docker-compose.yml  evaluation.ipynb  prompt.md  pyproject.toml  start.sh
backend/: requirements.txt
backend/app/: config.py
backend/app/agents/: narrative_agent.py  orchestrator.py  rules_lawyer_agent.py  tools.py  world_builder_agent.py
backend/app/api/: routes_play.py
backend/app/memory/: episodic_store.py  semantic_tkg.py
backend/app/models/: schemas.py
backend/app/rules/: lawyer.py
backend/app/scripts/: check_api.py
backend/app/services/: generation.py  llm_client.py
backend/app/storytelling/: main.py  orchestrator.py
data/rules/kb/classes/: fighter.json  wizard.json
data/rules/kb/conditions/: blinded.json  charmed.json  deafened.json  exhaustion.json  frightened.json  grappled.json  incapacitated.json  invisible.json  paralyzed.json  petrified.json  restrained.json
data/rules/kb/features/: action-surge-2-uses.json  additional-fighting-style.json  arcane-tradition-improvement-3.json  extra-attack-2.json  fighter-fighting-style-archery.json  fighter-fighting-style-defense.json  fighter-fighting-style-two-weapon-fighting.json  fighting-style-defense.json  (+15 more)
data/story/: hallows_end.txt
frontend/app/play/: page.tsx
src/: main.py
src/memory/: router.py
src/rulerag/: README.md  download_data.py  ingestPipeline.py  ingest_pipeline.py  lawyer.py  process_kb.py  prompts.py  rule_generation_pipeline.py  test_embedding.py
src/storytelling/: agents.py  orchestrator.py  tools.py
(+405 files in other folders)
